syntax = "proto3";

option csharp_namespace = "grpc_poc";

package farewell;

// The greeting service definition.
service Fareweller {
  // Sends a greeting
  rpc SayFarewell (FarewellRequest) returns (FarewellReply);
}

// The request message containing the user's name.
message FarewellRequest {
  string name = 1;
}

// The response message containing the greetings.
message FarewellReply {
  string message = 1;
}
